--- a/configs/custom_stm32f769_defconfig
+++ b/configs/custom_stm32f769_defconfig
@@ -3,13 +3,16 @@ BR2_cortex_m7=y
 BR2_DL_DIR="$(TOPDIR)/../dl"
 BR2_HOST_DIR="$(TOPDIR)/../host"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/patches"
-BR2_BINUTILS_VERSION_2_33_X=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_6=y
+BR2_GCC_VERSION_8_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_PACKAGE_HOST_ELF2FLT=y
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/overlay"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_STM32F769_PATH)/post-image.sh"
 BR2_LINUX_KERNEL=y
+BR2_LINUX_KERNEL_CUSTOM_VERSION=y
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.6.15"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/kernel.config"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
@@ -24,9 +27,11 @@ BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
+BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2020.04"
 BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/uboot.config"
 BR2_TARGET_UBOOT_SPL=y
 BR2_PACKAGE_HOST_OPENOCD=y
 BR2_PACKAGE_HELLO=y
-BR2_LINUX_KERNEL_VERSION="5.6.15"
