--- a/stm32f769i-disco/busybox.config
+++ b/stm32f769i-disco/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.31.1
-# Mon Apr  6 09:37:17 2020
+# Busybox version: 1.33.0
+# Tue Jun  1 10:04:51 2021
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -36,7 +36,6 @@ CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_FEATURE_CLEAN_UP is not set
 CONFIG_FEATURE_SYSLOG_INFO=y
 CONFIG_FEATURE_SYSLOG=y
-CONFIG_PLATFORM_LINUX=y
 
 #
 # Build Options
@@ -55,6 +54,7 @@ CONFIG_EXTRA_LDFLAGS=""
 CONFIG_EXTRA_LDLIBS=""
 # CONFIG_USE_PORTABLE_CODE is not set
 CONFIG_STACK_OPTIMIZATION_386=y
+CONFIG_STATIC_LIBGCC=y
 
 #
 # Installation Options ("make install" behavior)
@@ -76,6 +76,7 @@ CONFIG_PREFIX="./_install"
 # CONFIG_DEBUG_SANITIZE is not set
 # CONFIG_UNIT_TEST is not set
 # CONFIG_WERROR is not set
+# CONFIG_WARN_SIMPLE_MSG is not set
 CONFIG_NO_DEBUG_LIB=y
 # CONFIG_DMALLOC is not set
 # CONFIG_EFENCE is not set
@@ -326,14 +327,15 @@ CONFIG_BB_ARCH=y
 # CONFIG_UNLINK is not set
 # CONFIG_USLEEP is not set
 # CONFIG_UUDECODE is not set
+CONFIG_BASE32=y
 # CONFIG_BASE64 is not set
 # CONFIG_UUENCODE is not set
 # CONFIG_WC is not set
 # CONFIG_FEATURE_WC_LARGE is not set
-# CONFIG_WHOAMI is not set
 # CONFIG_WHO is not set
 CONFIG_W=y
 # CONFIG_USERS is not set
+# CONFIG_WHOAMI is not set
 # CONFIG_YES is not set
 
 #
@@ -450,6 +452,7 @@ CONFIG_FEATURE_ALLOW_EXEC=y
 # CONFIG_FEATURE_FIND_PRUNE is not set
 # CONFIG_FEATURE_FIND_QUIT is not set
 # CONFIG_FEATURE_FIND_DELETE is not set
+# CONFIG_FEATURE_FIND_EMPTY is not set
 # CONFIG_FEATURE_FIND_PATH is not set
 # CONFIG_FEATURE_FIND_REGEX is not set
 # CONFIG_FEATURE_FIND_CONTEXT is not set
@@ -499,10 +502,10 @@ CONFIG_USE_BB_PWD_GRP=y
 CONFIG_USE_BB_SHADOW=y
 CONFIG_USE_BB_CRYPT=y
 CONFIG_USE_BB_CRYPT_SHA=y
-# CONFIG_ADDGROUP is not set
-# CONFIG_FEATURE_ADDUSER_TO_GROUP is not set
 # CONFIG_ADD_SHELL is not set
 # CONFIG_REMOVE_SHELL is not set
+# CONFIG_ADDGROUP is not set
+# CONFIG_FEATURE_ADDUSER_TO_GROUP is not set
 # CONFIG_ADDUSER is not set
 # CONFIG_FEATURE_CHECK_NAMES is not set
 CONFIG_LAST_ID=0
@@ -609,7 +612,6 @@ CONFIG_FSFREEZE=y
 # CONFIG_GETOPT is not set
 # CONFIG_FEATURE_GETOPT_LONG is not set
 # CONFIG_HEXDUMP is not set
-# CONFIG_FEATURE_HEXDUMP_REVERSE is not set
 # CONFIG_HD is not set
 CONFIG_XXD=y
 # CONFIG_HWCLOCK is not set
@@ -680,6 +682,7 @@ CONFIG_FEATURE_SETPRIV_CAPABILITY_NAMES=y
 # CONFIG_SWITCH_ROOT is not set
 # CONFIG_TASKSET is not set
 # CONFIG_FEATURE_TASKSET_FANCY is not set
+# CONFIG_FEATURE_TASKSET_CPULIST is not set
 # CONFIG_UEVENT is not set
 # CONFIG_UMOUNT is not set
 # CONFIG_FEATURE_UMOUNT_ALL is not set
@@ -696,6 +699,7 @@ CONFIG_FEATURE_MOUNT_LOOP_CREATE=y
 # CONFIG_FEATURE_VOLUMEID_BCACHE is not set
 # CONFIG_FEATURE_VOLUMEID_BTRFS is not set
 # CONFIG_FEATURE_VOLUMEID_CRAMFS is not set
+# CONFIG_FEATURE_VOLUMEID_EROFS is not set
 # CONFIG_FEATURE_VOLUMEID_EXFAT is not set
 # CONFIG_FEATURE_VOLUMEID_EXT is not set
 # CONFIG_FEATURE_VOLUMEID_F2FS is not set
@@ -756,10 +760,10 @@ CONFIG_FEATURE_CROND_DIR=""
 # CONFIG_FEATURE_DEVFS is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_FBSPLASH is not set
-# CONFIG_FLASHCP is not set
 # CONFIG_FLASH_ERASEALL is not set
 # CONFIG_FLASH_LOCK is not set
 # CONFIG_FLASH_UNLOCK is not set
+# CONFIG_FLASHCP is not set
 # CONFIG_HDPARM is not set
 # CONFIG_FEATURE_HDPARM_GET_IDENTITY is not set
 # CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF is not set
@@ -793,6 +797,7 @@ CONFIG_LSSCSI=y
 # CONFIG_FEATURE_MAKEDEVS_TABLE is not set
 # CONFIG_MAN is not set
 CONFIG_MICROCOM=y
+CONFIG_MIM=y
 # CONFIG_MT is not set
 # CONFIG_NANDWRITE is not set
 # CONFIG_NANDDUMP is not set
@@ -808,13 +813,13 @@ CONFIG_SETFATTR=y
 # CONFIG_TIME is not set
 CONFIG_TS=y
 # CONFIG_TTYSIZE is not set
-# CONFIG_UBIRENAME is not set
 # CONFIG_UBIATTACH is not set
 # CONFIG_UBIDETACH is not set
 # CONFIG_UBIMKVOL is not set
 # CONFIG_UBIRMVOL is not set
 # CONFIG_UBIRSVOL is not set
 # CONFIG_UBIUPDATEVOL is not set
+# CONFIG_UBIRENAME is not set
 # CONFIG_VOLNAME is not set
 # CONFIG_WATCHDOG is not set
 
@@ -854,6 +859,10 @@ CONFIG_HOSTNAME=y
 # CONFIG_FEATURE_HTTPD_ERROR_PAGES is not set
 # CONFIG_FEATURE_HTTPD_PROXY is not set
 # CONFIG_FEATURE_HTTPD_GZIP is not set
+# CONFIG_FEATURE_HTTPD_ETAG is not set
+# CONFIG_FEATURE_HTTPD_LAST_MODIFIED is not set
+# CONFIG_FEATURE_HTTPD_DATE is not set
+# CONFIG_FEATURE_HTTPD_ACL_IP is not set
 CONFIG_IFCONFIG=y
 CONFIG_FEATURE_IFCONFIG_STATUS=y
 # CONFIG_FEATURE_IFCONFIG_SLIP is not set
@@ -1079,6 +1088,7 @@ CONFIG_SH_IS_HUSH=y
 # CONFIG_BASH_IS_ASH is not set
 # CONFIG_BASH_IS_HUSH is not set
 CONFIG_BASH_IS_NONE=y
+# CONFIG_SHELL_ASH is not set
 # CONFIG_ASH is not set
 # CONFIG_ASH_OPTIMIZE_FOR_SIZE is not set
 # CONFIG_ASH_INTERNAL_GLOB is not set
@@ -1099,6 +1109,7 @@ CONFIG_BASH_IS_NONE=y
 # CONFIG_ASH_CMDCMD is not set
 # CONFIG_CTTYHACK is not set
 CONFIG_HUSH=y
+CONFIG_SHELL_HUSH=y
 CONFIG_HUSH_BASH_COMPAT=y
 CONFIG_HUSH_BRACE_EXPANSION=y
 CONFIG_HUSH_LINENO_VAR=y
@@ -1161,6 +1172,7 @@ CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS=y
 # CONFIG_FEATURE_REMOTE_LOG is not set
 # CONFIG_FEATURE_SYSLOGD_DUP is not set
 # CONFIG_FEATURE_SYSLOGD_CFG is not set
+# CONFIG_FEATURE_SYSLOGD_PRECISE_TIMESTAMPS is not set
 CONFIG_FEATURE_SYSLOGD_READ_BUFFER_SIZE=0
 # CONFIG_FEATURE_IPC_SYSLOG is not set
 CONFIG_FEATURE_IPC_SYSLOG_BUFFER_SIZE=0
