--- a/configs/custom_stm32f769_defconfig
+++ b/configs/custom_stm32f769_defconfig
@@ -3,9 +3,14 @@ BR2_cortex_m7=y
 BR2_DL_DIR="$(TOPDIR)/../dl"
 BR2_HOST_DIR="$(TOPDIR)/../host"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/patches"
-BR2_GCC_VERSION_8_X=y
+BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
+BR2_PTHREAD_DEBUG=y
+BR2_TOOLCHAIN_BUILDROOT_USE_SSP=y
+BR2_GCC_VERSION_10_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_GCC_ENABLE_LTO=y
 BR2_PACKAGE_HOST_ELF2FLT=y
+BR2_ECLIPSE_REGISTER=y
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_STM32F769_PATH)/stm32f769i-disco/overlay"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_STM32F769_PATH)/post-image.sh"
