--- a/stm32f769i-disco/uboot.config
+++ b/stm32f769i-disco/uboot.config
@@ -15,12 +15,11 @@ CONFIG_AUTOBOOT_PROMPT="Hit SPACE in %d seconds to stop autoboot.\n"
 CONFIG_AUTOBOOT_STOP_STR=" "
 CONFIG_USE_BOOTARGS=y
 CONFIG_BOOTARGS="console=ttySTM0,115200 earlyprintk consoleblank=0 ignore_loglevel"
-CONFIG_BOOTCOMMAND="run conditionalboot"
+CONFIG_BOOTCOMMAND="run netboot"
 CONFIG_DEFAULT_FDT_FILE="stm32f769-disco"
 CONFIG_CONSOLE_MUX=y
 # CONFIG_DISPLAY_CPUINFO is not set
 # CONFIG_DISPLAY_BOARDINFO is not set
-CONFIG_BOARD_EARLY_INIT_F=y
 # CONFIG_SPL_OS_BOOT is not set
 CONFIG_SYS_PROMPT="U-Boot > "
 CONFIG_CMD_GPT=y
